add_subdirectory(cmake)
add_subdirectory(test)
add_subdirectory(common)
add_subdirectory(common_python)
add_subdirectory(crypto)
if(ENABLE_CURL)
    add_subdirectory(curl)
endif()
add_subdirectory(process)
add_subdirectory(utility)
add_subdirectory(pm)
add_subdirectory(protobuf)
add_subdirectory(rpc)
if(ENABLE_WEB)
    add_subdirectory(web)
endif()
add_subdirectory(broker)
bunsan_enable_testing()
